# bichon

./: CLAUDE.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug.md.md  feature.md  other.md
.github/workflows/: release.yml
src/: main.rs
src/modules/: mod.rs
src/modules/account/: grant.rs  migration.rs  view.rs
src/modules/common/: auth.rs  mod.rs
src/modules/database/: manager.rs  mod.rs
src/modules/error/: code.rs  mod.rs
src/modules/imap/: executor.rs
src/modules/import/: mbox.rs  mbox_comprehensive_test.rs  mbox_mock.rs  mbox_tests.rs  mod.rs
src/modules/indexer/: fields.rs  manager.rs  schema.rs
src/modules/mbox/: migration.rs
src/modules/message/: append.rs  content.rs  mod.rs  search.rs
src/modules/rest/: mod.rs
src/modules/rest/api/: account.rs  auto_config.rs  import.rs  mailbox.rs  message.rs  oauth2.rs  system.rs  users.rs
src/modules/rest/public/: login.rs
src/modules/settings/: cli.rs
src/modules/token/: mod.rs
src/modules/users/: mod.rs  payload.rs  view.rs
src/modules/utils/: encrypt.rs
web/src/: routeTree.gen.ts
web/src/api/mailbox/envelope/: api.ts
web/src/api/users/: api.ts
web/src/components/: confirm-dialog.tsx  date-picker.tsx
web/src/components/ui/: calendar.tsx
web/src/features/access-tokens/: index.tsx
web/src/features/access-tokens/components/: columns.tsx
web/src/features/accounts/components/: oauth2-tokens.tsx  running-state-dialog.tsx
web/src/features/auth/sign-in/components/: user-auth-form.tsx
web/src/features/mailbox/components/: account-switcher.tsx  mail-list.tsx  mail.tsx  restore-message-dialog.tsx
web/src/features/mailbox/context/: index.tsx
web/src/features/search/: add-tag-dialog.tsx  index.tsx  mail-list.tsx  restore-message-dialog.tsx
web/src/features/search/context/: index.tsx
web/src/features/settings/: index.tsx
web/src/features/settings/appearance/: appearance-form.tsx  index.tsx
web/src/lib/: utils.ts
web/src/locales/: ar.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  jp.json  ko.json  nl.json  no.json  pl.json  pt.json  ru.json  sv.json  zh-tw.json  zh.json
web/src/routes/_authenticated/settings/: appearance.lazy.tsx
